--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div id="map" style="width: 100%; height: 400px"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
